# DataStructures-and-Algorithms

./: .editorconfig  .gitignore  README.md  _config.yml
c++/: CMakeLists.txt  README.md
c++/Google_tests/: CMakeLists.txt
c++/Google_tests/basic_tests/: CMakeLists.txt  ConverterTests.cpp  TestEncapsulation.cpp
c++/Google_tests/lib/: test1.cpp
c++/Google_tests/lib/docs/: advanced.md  gmock_cheat_sheet.md  primer.md
c++/Google_tests/lib/docs/reference/: testing.md
c++/Google_tests/lib/googlemock/: CMakeLists.txt
c++/Google_tests/lib/googlemock/src/: gmock-spec-builders.cc  gmock.cc
c++/Google_tests/lib/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-matchers_test.h  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  gmock-pp-string_test.cc  gmock-spec-builders_test.cc  gmock_all_test.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc  gmock_test.cc
c++/Google_tests/lib/googletest/: CMakeLists.txt
c++/Google_tests/lib/googletest/cmake/: internal_utils.cmake
c++/Google_tests/lib/googletest/samples/: prime_tables.h  sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
c++/Google_tests/lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
c++/Google_tests/lib/googletest/test/: googletest-break-on-failure-unittest.py  googletest-catch-exceptions-test.py  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-failfast-unittest.py  googletest-filepath-test.cc  googletest-filter-unittest.py  googletest-filter-unittest_.cc  googletest-global-environment-unittest.py  googletest-json-outfiles-test.py  googletest-json-output-unittest.py  googletest-list-tests-unittest.py  googletest-list-tests-unittest_.cc  googletest-listener-test.cc  googletest-options-test.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-param-test-test.cc  googletest-port-test.cc  googletest-printers-test.cc  googletest-shuffle-test.py  googletest-throw-on-failure-test.py  googletest-throw-on-failure-test_.cc  gtest-typed-test_test.cc  gtest-unittest-api_test.cc  gtest_all_test.cc  gtest_assert_by_exception_test.cc  gtest_environment_test.cc  gtest_help_test.py  gtest_help_test_.cc  gtest_list_output_unittest.py  gtest_list_output_unittest_.cc  gtest_no_test_unittest.cc  gtest_pred_impl_unittest.cc  gtest_repeat_test.cc  gtest_skip_check_output_test.py  gtest_skip_test.cc  gtest_stress_test.cc  gtest_test_macro_stack_footprint_test.cc  gtest_testbridge_test_.cc  (+6 more)
c++/source/: encapsulation.cpp  encapsulation.h
c++/source_lib/: CMakeLists.txt  encapsulation.cpp  encapsulation.h
c-sharp/: README.md
cplusplus/: CMakeLists.txt  README.md
cplusplus/Google_tests/: CMakeLists.txt
cplusplus/Google_tests/basic_tests/: AbsoluteDateTest.cpp  ArraysTest.cpp  CMakeLists.txt  ConverterTests.cpp  TestEncapsulation.cpp
cplusplus/Google_tests/lib/: CMakeLists.txt  WORKSPACE
cplusplus/Google_tests/lib/.github/ISSUE_TEMPLATE/: 10-feature_request.yml
cplusplus/Google_tests/lib/ci/: linux-presubmit.sh  windows-presubmit.bat
cplusplus/Google_tests/lib/docs/: advanced.md  gmock_cheat_sheet.md  gmock_cook_book.md  primer.md
cplusplus/Google_tests/lib/docs/reference/: matchers.md  testing.md
cplusplus/Google_tests/lib/googlemock/: CMakeLists.txt
cplusplus/Google_tests/lib/googlemock/src/: gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc
cplusplus/Google_tests/lib/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-matchers_test.h  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  gmock-pp-string_test.cc  gmock-spec-builders_test.cc  gmock_all_test.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc  gmock_output_test_golden.txt  gmock_test.cc
cplusplus/Google_tests/lib/googletest/: CMakeLists.txt
cplusplus/Google_tests/lib/googletest/cmake/: internal_utils.cmake
cplusplus/Google_tests/lib/googletest/samples/: prime_tables.h  sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
cplusplus/source_lib/: CMakeLists.txt  encapsulation.cpp  encapsulation.h
cplusplus/source_lib/ArrayShift/: ArrayShift.cpp  ArrayShift.h
cplusplus/source_lib/Arrays/BinarySearch/: BinarySearch.cpp  BinarySearch.h
cplusplus/source_lib/Arrays/InsertionShiftArray/: InsertionShiftArray.cpp  InsertionShiftArray.h
cplusplus/source_lib/Arrays/InsertionSort/: InsertionSort.cpp  InsertionSort.h
cplusplus/source_lib/Arrays/MergeSort/: MergeSort.cpp  MergeSort.h
cplusplus/source_lib/inheritence_example/: encapsulation.cpp  encapsulation.h
(+354 files in other folders)
